Fix z-index for recurrent message

--- a/src/app/lp/lp.component.scss
+++ b/src/app/lp/lp.component.scss
@@ -151,7 +151,7 @@ jnt-lp-slide {
     text-align: center;
     line-height: 1.75em;
     position: relative;
-    z-index: 100;
+    z-index: 1;
   }
 
   [data-teaser] {
